# peryx

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  README.md  mise.toml  proposal.md  pyproject.toml  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: ci.yml  codspeed.yml  conformance.yml  publish-pypi.yml  release.yml
.tmp/: candidate-ci-identity.md  candidate-retention.md  issue-backup-restore-import.md  issue-full-mirror-offline.md  issue-object-storage.md  issue-retention-cleanup.md
ci/: run-codspeed.sh  run-oci-conformance.sh
crates/peryx/: Cargo.toml
crates/peryx-bench/: Cargo.toml
crates/peryx-bench/src/: compare.rs  machine.rs  main.rs  report.rs
crates/peryx-core/: Cargo.toml
crates/peryx-core/src/: ecosystem.rs  lib.rs  role.rs  url_encoding.rs  view.rs
crates/peryx-driver/: Cargo.toml
crates/peryx-driver/src/: access.rs  body.rs  conditional.rs  discovery.rs  download.rs  driver_set.rs  lib.rs  openapi.rs  rate_limit.rs  serving.rs
crates/peryx-ecosystem-oci/: Cargo.toml
crates/peryx-ecosystem-oci/benches/: blob_serve.rs  manifest_by_digest.rs  operations.rs  tags_list.rs  version_check.rs
crates/peryx-ecosystem-pypi/: Cargo.toml
crates/peryx-events/: Cargo.toml
crates/peryx-events/benches/: usage_aggregate.rs
crates/peryx-events/src/: lib.rs  metrics.rs  security.rs
crates/peryx-events/src/webhook/: delivery.rs  host.rs  mod.rs
crates/peryx-format/: Cargo.toml
crates/peryx-http/: Cargo.toml
crates/peryx-http/src/: lib.rs  (+8 more)
crates/peryx-identity/: Cargo.toml
crates/peryx-identity/src/: acl.rs  lib.rs  tests.rs  token.rs
crates/peryx-identity/src/tests/: acl_tests.rs  basic_tests.rs  mod.rs  token_tests.rs
crates/peryx-index/: Cargo.toml
crates/peryx-policy/: Cargo.toml
crates/peryx-replication/: Cargo.toml
crates/peryx-replication/src/: error.rs  http.rs  http_tests.rs  lib.rs  protocol.rs  replica.rs  tests.rs
crates/peryx-storage/: Cargo.toml
crates/peryx-storage/src/: lib.rs
crates/peryx-storage/src/archive/: engine.rs  mod.rs
crates/peryx-storage/src/blob/: backend.rs  error.rs  mod.rs  storage.rs  store.rs
crates/peryx-storage/src/meta/: analytics.rs  error.rs  index.rs  job.rs  journal.rs  mod.rs  policy_decision.rs  quota.rs  record.rs  uploads.rs  writer.rs
crates/peryx-storage/src/tests/blob/: error_tests.rs  mod.rs  store_tests.rs
crates/peryx-storage/src/tests/meta/: analytics_tests.rs  driver_txn_tests.rs  files_tests.rs  index_tests.rs  integration_tests.rs  job_tests.rs  journal_tests.rs  mod.rs  policy_decision_tests.rs  quota_tests.rs  record_tests.rs  replica_tests.rs  uploads_tests.rs  webhook_tests.rs  writer_tests.rs
crates/peryx-storage/tests/: blob_backend.rs
crates/peryx-upstream/: Cargo.toml
crates/peryx-upstream/src/: lib.rs  route.rs
crates/peryx-upstream/src/client/: error.rs  mod.rs  netrc.rs
crates/peryx-upstream/src/tests/: mod.rs  route_tests.rs
crates/peryx-upstream/src/tests/client/: client_tests.rs  error_tests.rs  mod.rs  netrc_tests.rs  retry_tests.rs
crates/peryx-web/: Cargo.toml
crates/velodex/: Cargo.toml
crates/velodex-bench/: Cargo.toml
crates/velodex-bench/benches/: components.rs  serve.rs  transform.rs
crates/velodex-bench/src/: main.rs  report.rs  servers.rs  usage.rs  workloads.rs
crates/velodex-bench/src/ecosystems/: mod.rs
crates/velodex-bench/src/ecosystems/pypi/: mod.rs  servers.rs  workloads.rs
crates/velodex-ecosystem-pypi/: Cargo.toml
crates/velodex-ecosystem-pypi/benches/: rate_limit.rs
crates/velodex-ecosystem-pypi/src/: archive.rs  cache.rs  discovery.rs  legacy_json.rs  lib.rs  name.rs  policy.rs  search_pypi.rs  serving.rs  simple.rs  stream.rs  upload.rs
crates/velodex-ecosystem-pypi/src/tests/: conformance_tests.rs  fanout_tests.rs  filename_tests.rs  http_tests.rs  metadata_tests.rs  metrics_tests.rs  mod.rs  name_tests.rs  policy_tests.rs  rate_limit_tests.rs  refresh_tests.rs  search_tests.rs  serve_tests.rs  simple_tests.rs  stream_tests.rs  upload_tests.rs  webhooks_tests.rs
crates/velodex-format/: Cargo.toml
crates/velodex-http/: Cargo.toml
crates/velodex-identity/: Cargo.toml
crates/velodex-identity/src/: lib.rs  tests.rs
crates/velodex-policy/: Cargo.toml
crates/velodex-policy/src/: lib.rs  tests.rs
crates/velodex-replication/: Cargo.toml
crates/velodex-replication/src/: lib.rs
crates/velodex-upstream/: Cargo.toml
crates/velodex-web/: Cargo.toml
crates/velox/: Cargo.toml
crates/velox-core/: Cargo.toml
crates/velox-http/: Cargo.toml
crates/velox-storage/: Cargo.toml
crates/velox-upstream/: Cargo.toml
crates/velox-web/: Cargo.toml
site/: config.toml  package-lock.json  package.json
site/content/: _index.md  brand-book.md  contributing.md
site/data/: ecosystems.toml
site/diagrams/: 02243ccba411c9be.html  0c8ceeb96bf9abb0.html  0cc3e11f14b342ae.html  1b12039ecaa89550.html  1b87b4dc5dcac5c6.html  1c01339b1813b8e3.html  25ec73f614aaf685.html  309d59b3ca1223f2.html  3755ad6a0f945e67.html  3a4c626ff3d186de.html  3c01f5f06cdac45c.html  3cd21fecc6a5bcbe.html  4292b4e7bef6414b.html  50e328b5fec82be2.html  560ec99df5f1c7e9.html  5fceb2c45de6880d.html  6f7d0fa0e5f132b8.html  77d88ca5b14abb6b.html  8291601b1039ff0a.html  88d5cd667b92e58d.html  90e300354c7716d2.html  9229a3a98d67ec9e.html  961f03120a8bfb58.html  9a20d92eaee5549c.html  a9e3f812c47a35ed.html  acbb9681570c56c4.html  b0f157e1a43d3f93.html  b687826a90370646.html  bb2a58c167e67842.html  ccb8841debe61673.html  e4ff3a0bd51fb91c.html  ee637e7d2902a6fc.html  f1c1f64b0347f36b.html  f80d3ded2d9e402c.html  fa529241915706cb.html
site/sass/: style.scss
site/scripts/: gen_llms.py  inline_diagrams.py  mermaid-dark.json  mermaid-light.json  render_diagrams.mjs
site/static/: brand-book.html  openapi.json
site/templates/: base.html  brand-book.html  index.html  page.html  robots.txt  section.html
tests/frontend/: capture-screens.mjs  package-lock.json  package.json  playwright.config.mjs  serve.mjs
tests/perf/: locustfile.py  packages.py  run.py
(+652 files in other folders)
