[package]
name = "peryx-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity and access for peryx: credential verification today, the ACL and token-provider seam for later."

[dependencies]
base64.workspace = true

[lints]
workspace = true
