[package]
name = "peryx-replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Primary/replica replication protocol for peryx, built on the storage journal."

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
peryx-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
