[package]
name = "peryx-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed blob store and metadata storage for peryx."

[dependencies]
bytes.workspace = true
futures-util.workspace = true
fs4.workspace = true
peryx-identity.workspace = true
peryx-policy.workspace = true
sha2.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true

[lints]
workspace = true
