[package]
name = "velodex-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Comparative benchmark harness: velodex against direct PyPI and competing index servers."
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true

# The wall-clock workloads live in the binary; the instrumented benchmarks live beside them and
# drive a real velodex instance end to end, so CodSpeed measures the actual serving path — routing,
# cache lookup, upstream mirroring, transform, and streaming — not re-implemented helpers.
[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
velodex-http.workspace = true
velodex-storage.workspace = true
velodex-upstream.workspace = true
axum.workspace = true
http.workspace = true
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }
wiremock.workspace = true

[[bench]]
name = "serve"
harness = false

# CPU-bound transform microbenchmark: runs under CodSpeed's instrumented instrument on an ordinary
# runner, so page-rewrite regressions are caught per commit without the macro runners walltime needs.
[[bench]]
name = "transform"
harness = false

[lints]
workspace = true
