[package]
name = "velodex-ecosystem-pypi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The PyPI ecosystem driver for velodex: project names, versions, and the simple repository API."

[dependencies]
velodex-format.workspace = true
serde.workspace = true
serde_json.workspace = true
pep440_rs.workspace = true
tl.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
