[package]
name = "velodex-replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reserved: primary/replica replication for velodex, built on the storage journal."

[dependencies]

[lints]
workspace = true
